--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 		<div class="left-border col-md-1"></div>
 		<div class="content col-md-7">
 			<header>
-				<h1>{{ _.name }}</h1>
+				<h1 class="name">{{ _.name }}</h1>
 				<div class="highlights">
 					<span ng-repeat="highlight in _.highlights" ng-bind-html-compile="highlight"></span>
 				</div>
 			</header>
 			<div class="panel">
 				<div class="panel-heading">
-					<h3 class="section-heading"><span>Experience</span></h3>
+					<h2 class="section-heading"><span>Experience</span></h2>
 				</div>
 				<div class="panel-body">
 					<ul class="list-group experiences">
@@ -110,7 +110,7 @@
 									<script type="text/ng-template" id="jobTitlePopover.html">
 										<span ng-bind-html="job.about"></span>
 									</script>
-									<strong class="card-title"
+									<h4 class="card-title"
 													popover-enable="job.about!=undefined"
 													popover-popup-close-delay="500"
 													popover-placement="top-left"
@@ -118,7 +118,7 @@
 													popover-title="{{ job.company }}"
 													uib-popover-template="'jobTitlePopover.html'">
 										{{job.company}}
-									</strong>
+									</h4>
 									<a href="{{ job.mapUrl }}" target="_blank"><i
 												class="fa fa-map-marker dim"></i></a>&thinsp;<em>{{job.location }}</em>
 									<div class="row" ng-repeat="role in job.roles">
@@ -152,7 +152,7 @@
 			</div>
 			<div class="panel">
 				<div class="panel-heading">
-					<h3 class="section-heading"><span>Education</span></h3>
+					<h2 class="section-heading"><span>Education</span></h2>
 				</div>
 				<div class="panel-body">
 					<ul class="list-group educations">
@@ -163,7 +163,7 @@
 									<script type="text/ng-template" id="edTitlePopover.html">
 										<span ng-bind-html="ed.about"></span>
 									</script>
-									<strong class="card-title"
+									<h4 class="card-title"
 													popover-enable="ed.about!=undefined"
 													popover-popup-close-delay="500"
 													popover-placement="top-left"
@@ -171,7 +171,7 @@
 													popover-title="{{ ed.institution }}"
 													uib-popover-template="'edTitlePopover.html'">
 										{{ed.institution}}
-									</strong>
+									</h4>
 									<a href="{{ ed.mapUrl }}" target="_blank"><i class="fa fa-map-marker dim"></i></a>&thinsp;<em>{{ed.location
 									}}</em>
 									<div class="row" ng-repeat="degree in ed.degree">
@@ -286,7 +286,7 @@
 				<div class="col-sm-12">
 					<div class="panel">
 						<div class="panel-heading">
-							<h4 class="text-primary">Leadership</h4>
+							<h3 class="text-primary">Leadership</h3>
 						</div>
 						<div class="panel-body">
 							<ul class="list-group">
@@ -309,7 +309,7 @@
 				<div class="col-sm-12">
 					<div class="panel">
 						<div class="panel-heading">
-							<h4 class="text-primary">Involvement</h4>
+							<h3 class="text-primary">Involvement</h3>
 						</div>
 						<div class="panel-body">
 							<ul class="list-group">
@@ -326,7 +326,7 @@
 				<div class="col-sm-12">
 					<div class="panel">
 						<div class="panel-heading">
-							<h4 class="text-primary">Personal Projects</h4>
+							<h3 class="text-primary">Personal Projects</h3>
 						</div>
 						<div class="panel-body">
 							TuneTour.me, WaqtScope, Sonnivo, LikhonPad, NLParse and more<br/>
