fix for small screens

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 												class="fa fa-map-marker dim"></i></a>&thinsp;<span
 											class="place-name">{{job.location }}</span>
 									<div class="row" ng-repeat="role in job.roles">
-										<div class="col-sm-6">
+										<div class="col-md-6">
 											<span class="text-primary job-role">{{ role.title }}</span>
 										</div>
-										<div class="col-sm-6 text-right time-period">
+										<div class="col-md-6 text-right time-period">
 											<span class="job-period" ng-if="role.time.since!=undefined">
 												{{ role.time.since }}
 												- <i ng-if="role.time.current" class="fa fa-spinner fa-pulse fa-fw"
@@ -178,10 +178,10 @@
 												class="fa fa-map-marker dim"></i></a>&thinsp;<span
 											class="place-name">{{ed.location }}</span>
 									<div class="row" ng-repeat="degree in ed.degree">
-										<div class="col-sm-7">
+										<div class="col-md-7">
 											<span class="text-primary degree">{{ degree.title }}</span>
 										</div>
-										<div class="col-sm-5 text-right time-period">
+										<div class="col-md-5 text-right time-period">
 											<span class="degree-period" ng-if="degree.time.since!=undefined">
 												{{ degree.time.since }}
 												- <i ng-if="degree.time.current" class="fa fa-spinner fa-pulse fa-fw"
@@ -242,7 +242,7 @@
 			<div style="height: 20px;">
 			</div>
 			<div class="skills row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<span class="main-skills">
 						<strong class="text-primary">Languages:</strong>
 						<span ng-repeat="lang in _.skills.programming"
@@ -258,35 +258,35 @@
 				</div>
 			</div>
 			<div class="side-note row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<strong class="text-primary">Talked</strong> on
 					“Research in the Computing Industry”
 					<em class="text-muted">at CSE Festival, KUET (Jun 2012)</em>
 				</div>
 			</div>
 			<div class="side-note row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<strong class="text-primary">Awarded</strong>
 					“Icon of the Month”
 					<em class="text-muted">by Samsung R&D Institute – Bangladesh</em>
 				</div>
 			</div>
 			<div class="side-note row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<strong class="text-primary">11th place</strong> on
 					at ACM ICPC
 					<em class="text-muted">Dhaka Regional programming contest 2007</em>
 				</div>
 			</div>
 			<div class="side-note row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<strong class="text-primary">Showcased project</strong>
 					“Smart Home Technology”
 					<em class="text-muted">at BASIS SoftExpo, Dhaka 2008</em>
 				</div>
 			</div>
 			<div class="leadership row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<div class="panel">
 						<div class="panel-heading">
 							<h3 class="text-primary">Leadership</h3>
@@ -309,7 +309,7 @@
 				</div>
 			</div>
 			<div class="involvement row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<div class="panel">
 						<div class="panel-heading">
 							<h3 class="text-primary">Involvement</h3>
@@ -326,7 +326,7 @@
 				</div>
 			</div>
 			<div class="personal-projects row">
-				<div class="col-sm-12">
+				<div class="col-md-12">
 					<div class="panel">
 						<div class="panel-heading">
 							<h3 class="text-primary">Personal Projects</h3>
