--- a/index.html
+++ b/index.html
@@ -258,83 +258,24 @@
 					</small>
 				</div>
 			</div>
-			<div class="side-note row">
+			<div class="side-note row" ng-repeat="note in _.sideNotes">
 				<div class="col-md-12">
-					<strong class="text-primary">Talked</strong> on
-					“Research in the Computing Industry”
-					<em class="text-muted">at CSE Festival, KUET (Jun 2012)</em>
+					<strong class="text-primary">{{ note.head }}</strong>
+					<span ng-bind-html-compile="note.body"></span>
 				</div>
 			</div>
-			<div class="side-note row">
-				<div class="col-md-12">
-					<strong class="text-primary">Awarded</strong>
-					“Icon of the Month”
-					<em class="text-muted">by Samsung R&D Institute – Bangladesh</em>
-				</div>
-			</div>
-			<div class="side-note row">
-				<div class="col-md-12">
-					<strong class="text-primary">11th place</strong> on
-					at ACM ICPC
-					<em class="text-muted">Dhaka Regional programming contest 2007</em>
-				</div>
-			</div>
-			<div class="side-note row">
-				<div class="col-md-12">
-					<strong class="text-primary">Showcased project</strong>
-					“Smart Home Technology”
-					<em class="text-muted">at BASIS SoftExpo, Dhaka 2008</em>
-				</div>
-			</div>
-			<div class="leadership row">
+			<div class="side-section row" ng-repeat="section in _.sections">
 				<div class="col-md-12">
 					<div class="panel">
 						<div class="panel-heading">
-							<h3 class="text-primary">Leadership</h3>
+							<h3 class="section-head text-primary">{{section.title}}</h3>
 						</div>
 						<div class="panel-body">
-							<ul class="list-group">
+							<ul class="list-group" ng-repeat="info in section.info">
+								<li class="list-group-item" ng-bind-html-compile="info.description"></li>
 								<li class="list-group-item">
-									<em>IEEE Student Branch KUET</em><br/>
-									General Secretary,
-									<small> (2008-2009)</small>
-								</li>
-								<li class="list-group-item">
-									<em>Fazlul Haque Hall Committee, KUET</em> -
-									General Secretary
-									<small> (2008-2009)and Asst. Gen. Secretary (2007-2008)</small>
 								</li>
 							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="involvement row">
-				<div class="col-md-12">
-					<div class="panel">
-						<div class="panel-heading">
-							<h3 class="text-primary">Involvement</h3>
-						</div>
-						<div class="panel-body">
-							<ul class="list-group">
-								<li class="list-group-item">
-									Publisher, <em>lekhalikhi.com</em>
-									- Bengali Literary Community
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="personal-projects row">
-				<div class="col-md-12">
-					<div class="panel">
-						<div class="panel-heading">
-							<h3 class="text-primary">Personal Projects</h3>
-						</div>
-						<div class="panel-body">
-							TuneTour.me, WaqtScope, Sonnivo, LikhonPad, NLParse and more<br/>
-							<a href="http://nafSadh.com/projects">http://nafSadh.com/projects</a>
 						</div>
 					</div>
 				</div>
