--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="ns7rApp">
 <head>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Resume: Khan 'Sadh' Mostafa</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet"
@@ -180,7 +181,7 @@
 									<div class="row" ng-repeat="degree in ed.degree">
 										<div class="col-md-8">
 											<span class="text-primary degree">{{ degree.title }}</span>
-											<small class="text-muted cgpa">(CGPA:{{degree.cgpa}})</small>
+											<small class="text-muted cgpa" ng-if="degree.cgpa!=undefined">(CGPA:{{degree.cgpa}})</small>
 										</div>
 										<div class="col-md-4 text-right time-period">
 											<span class="degree-period" ng-if="degree.time.since!=undefined">
