--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<li class="list-group-item education" ng-repeat="ed in _.education">
 							<div class="card">
 								<div class="card-heading">
-									<i class="fa fa-li fa-2x fa-briefcase silver" aria-hidden="true"></i>
+									<i class="fa fa-li fa-2x fa-graduation-cap silver" aria-hidden="true"></i>
 									<script type="text/ng-template" id="edTitlePopover.html">
 										<span ng-bind-html="ed.about"></span>
 									</script>
