--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 				$this.css('margin-top', $this.parent().height() - $this.height())
 			});
 		}
+
 		var ns7rApp = angular.module('ns7rApp', ['ngSanitize', 'ui.bootstrap']);
+
 		ns7rApp.directive("ngBindHtmlCompile", function ($compile, $sce) {
 			return {
 				restrict: "A",
@@ -51,8 +53,11 @@
 			};
 		});
 
-		ns7rApp.controller('ns7rCtrl', function ($scope, $http) {
-
+		ns7rApp.controller('ns7rCtrl', function ($scope, $http, $location) {
+			$scope.location = $location;
+			$scope.$watch('location.search()', function () {
+				$scope.psstEmail = ($location.search()).psstEmail;
+			}, true);
 			$http.get('resume.json')
 						.then(function (r) {
 							$scope._ = r.data
@@ -233,7 +238,11 @@
 						</li>
 						<li>
 							<abbr title="email"><i class="fa-li fa fa-envelope-o"></i></abbr>
-							<a href="http://www.google.com/recaptcha/mailhide/d?k=01_bmF3LEMqW7B3w_zN6lSQg==&amp;c=opcdpKAsFHm-TMrY5uCSLq_QITVtZYMMh_x2vqGH4P4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01_bmF3LEMqW7B3w_zN6lSQg\x3d\x3d\x26c\x3dopcdpKAsFHm-TMrY5uCSLq_QITVtZYMMh_x2vqGH4P4\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">click to see</a>
+							<a ng-if="!psstEmail"
+								 href="http://www.google.com/recaptcha/mailhide/d?k=01_bmF3LEMqW7B3w_zN6lSQg==&amp;c=opcdpKAsFHm-TMrY5uCSLq_QITVtZYMMh_x2vqGH4P4="
+								 onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01_bmF3LEMqW7B3w_zN6lSQg\x3d\x3d\x26c\x3dopcdpKAsFHm-TMrY5uCSLq_QITVtZYMMh_x2vqGH4P4\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
+								 title="Reveal this e-mail address">click to see</a>
+							<a ng-if="psstEmail">{{ psstEmail }}</a>
 						</li>
 						<li>
 							<abbr title="website"><i class="fa-li fa fa-globe"></i></abbr>
