--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 								 href="http://www.google.com/recaptcha/mailhide/d?k=01_bmF3LEMqW7B3w_zN6lSQg==&amp;c=opcdpKAsFHm-TMrY5uCSLq_QITVtZYMMh_x2vqGH4P4="
 								 onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01_bmF3LEMqW7B3w_zN6lSQg\x3d\x3d\x26c\x3dopcdpKAsFHm-TMrY5uCSLq_QITVtZYMMh_x2vqGH4P4\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
 								 title="Reveal this e-mail address">click to see</a>
-							<a ng-if="psstEmail">{{ psstEmail }}</a>
+							<a ng-if="psstEmail" href="mailto:{{ psstEmail }} ">{{ psstEmail }}</a>
 						</li>
 						<li>
 							<abbr title="website"><i class="fa-li fa fa-globe"></i></abbr>
