--- a/md.html
+++ b/md.html
@@ -1,55 +1,296 @@
-<html>
+<html ng-app="ns7rApp">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script language="javascript">
-        var NL ='\n<br/>'
-        function combine(items, delim) {
-            var str = '';
-            for (var i=0;i<items.length-1;i++) {
-                str += items[i] + delim
-            }
-            str+= items[i];
-            return str;
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Resume: Khan 'Sadh' Mostafa</title>
+  <!-- Optional theme -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <!-- angular js -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+  <script
+        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-sanitize.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
+  <script src="./ui-bootstrap-tpls-1.3.2.min.js"></script>
+  <script>
+    var ns7rApp = angular.module('ns7rApp', ['ngSanitize', 'ui.bootstrap']);
+    ns7rApp.directive("ngBindHtmlCompile", function ($compile, $sce) {
+      return {
+        restrict: "A",
+        link: function (scope, element, attrs) {
+          scope.$watch(attrs.ngBindHtmlCompile, function (html) {
+            var el = angular.element("<span>").html(html);
+            element.empty();
+            element.append(el);
+            $compile(element.contents())(scope);
+          })
         }
+      };
+    });
 
-        function addressLine(a) {
-            return ''+a.street+', '+a.city+', '+ a.state+' '+a.postCode
+    ns7rApp.controller('ns7rCtrl', function ($scope, $http, $location) {
+      $scope.location = $location;
+      $scope.$watch('location.search()', function () {
+        $scope.psstEmail = ($location.search()).psstEmail;
+      }, true);
+      $http.get('resume.json')
+            .then(function (r) {
+              $scope._ = r.data
+            })
+
+      $scope.mlt = function mlt(text) {
+        if (angular.isArray(text)) {
+          var t = ''
+          for (var i = 0; i < text.length; i++) {
+            t += text[i]
+          }
+          return t
+        } else {
+          return text
         }
+      };
 
-        function experience(e) {
-            var str ='';
-            str+=e.company+NL;
-            str+=e.location+NL;
+      $scope.ul = function underline(text, marker) {
+        return marker.repeat(text.length)
+      };
 
-            return str;
+      $scope.nl = function withLineBreak(text) {
+        return text + '&nbsp;&nbsp;<br/>'
+      };
+
+      $scope.csl = function commaSepList(list) {
+        return list.join(", ")
+      };
+
+
+      $scope.renderAddress = function (_a) {
+        if (_a != undefined) {
+          var stateTagOpen, stateTagClose;
+          if (_a.stateFull != undefined) {
+            stateTagOpen = "<abbr data-toggle='tooltip' title='" + _a.stateFull + "'>"
+            stateTagClose = "</abbr>"
+          }
+          return _a.street + "<br/>" +
+                _a.city + ", " +
+                stateTagOpen + _a.state + stateTagClose
+                + " "
+                + _a.postCode;
         }
-
-        $(function () {
-            console.log('haha')
-            $.get("resume.json", function (data) {
-                console.log(data);
-                var resume = data;
-                var markdown = resume.name + NL+"==============="+NL
-                markdown += combine(resume.highlights,NL)+NL+NL;
-                markdown+= addressLine(resume.address)+NL;
-                markdown+= resume.phone+NL;
-                markdown+= resume.email+NL;
-                markdown+= resume.website+NL+NL;
-                markdown+= 'Programming: '+combine(resume.skills.programming,', ')+NL;
-                markdown+= 'Other: '+combine(resume.skills.other,', ')+NL;
-
-                markdown+=NL+'Experience'+NL+'-----------'
-                for(e of resume.experience){
-                    markdown+=NL+experience(e)+NL
-                }
-
-                $('#content-markdown').html(markdown)
-
-            });
-        });
-    </script>
+      }
+    })
+  </script>
+  <style>
+    h1, h2, h3, h4, h5 {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
-<div id="content-markdown"></div>
+<div ng-controller="ns7rCtrl" class="container" style="font-family: monospace">
+  <div class="row">
+    <div class="left-border col-md-1"></div>
+    <div class="content col-md-7">
+      <header>
+        <h1 class="name">{{ _.name }}
+          <br/><span class="name" ng-bind-html="ul(_.name,'=')"></span>
+        </h1>
+        <div class="highlights">
+          <span ng-repeat="highlight in _.highlights" ng-bind-html-compile="nl(highlight)"></span>
+        </div>
+      </header>
+      <br/>
+      <div class="top-info">
+        <div class="row info-address">
+          <div class="fa-ul">
+            <div>
+              <i class="fa-li fa fa-map-marker" aria-hidden="true"></i>
+              <address ng-bind-html-compile="renderAddress(_.address)"></address>
+              &nbsp;&nbsp;
+            </div>
+            <div>
+              <abbr title="Phone"><i class="fa-li fa fa-phone"></i></abbr>
+              <a href="{{ _.telUrl }}">{{ _.phone }}</a>&nbsp;&nbsp;
+            </div>
+            <div>
+              <abbr title="email"><i class="fa-li fa fa-envelope-o"></i></abbr>
+              <a ng-if="!psstEmail" href="mailto:{{ _.email }}">{{ _.email }}</a>
+              <a ng-if="psstEmail" href="mailto:{{ psstEmail }} ">{{ psstEmail }}</a>
+              &nbsp;&nbsp;
+            </div>
+            <div>
+              <abbr title="website"><i class="fa-li fa fa-globe"></i></abbr>
+              <a href="{{_.website}}">{{ _.website }}</a>
+              &nbsp;&nbsp;
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <br/>
+        <h2 class="section-heading"><span>Highlights</span><br/><span ng-bind-html="ul('Highlights','=')"></span></h2>
+        <div class="skills row">
+          <div class="col-md-12">
+						<span class="main-skills">*
+							<strong class="text-primary">Languages:</strong>
+							<span><code ng-bind-html-compile="csl(_.skills.programming)"></code></span>
+						</span>
+            <br/>*
+            <strong class="text-primary">Familiar with:</strong>
+            <span><code ng-bind-html-compile="csl(_.skills.other)"></code></span>
+            etc.
+          </div>
+        </div>
+        <div class="side-note row" ng-repeat="note in _.sideNotes">
+          <div class="col-md-12">*
+            <strong class="text-primary">{{ note.head }}</strong>
+            <span ng-bind-html-compile="note.body"></span>
+          </div>
+        </div>
+      </div>
+      <div class="panel">
+        <div class="panel-heading">
+          <br/>
+          <h2 class="section-heading">
+            <span>Experience</span><br/><span ng-bind-html="ul('Experience','=')"></span>
+          </h2>
+        </div>
+        <div class="panel-body">
+          <div class="list-group experiences">
+            <div class="list-group-item experience" ng-repeat="job in _.experience">
+              <div class="card">
+                <div class="card-heading">
+                  <br/>
+                  <h4 class="card-title">
+                    {{job.company}}
+                    <br/><span ng-bind-html="ul(job.company,'-')"></span>
+                  </h4>
+                  <span class="place-name">{{job.location }}&nbsp;&nbsp;</span>
+                  <div class="row" ng-repeat="role in job.roles">
+                    <div class="col-md-6">
+                      <b class="text-primary job-role">**{{ role.title }}** </b>
+											<span class="job-period" ng-if="role.time.since!=undefined">
+												({{ role.time.since }}
+												- <i ng-if="role.time.current" class="fa fa-spinner fa-pulse fa-fw"
+                             uib-tooltip="current" print-alt="now"></i>
+												{{ role.time.until}})
+											</span>
+                      <span class="job-period" ng-if="role.time.period!=undefined">
+												({{ role.time.period }})
+											</span>
+                      &nbsp;&nbsp;
+                    </div>
+                  </div>
+                </div>
+                <div class="list-group strips">
+                  <div class="list-group-item strip" ng-repeat="info in job.info">
+                    *
+                    <span class="description" ng-bind-html-compile="mlt(info.description)"></span>
+                    <code ng-repeat="key in info.tech">({{ key }}) </code>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel">
+        <div class="panel-heading">
+          <br/>
+          <h2 class="section-heading"><span>Education</span><br/><span ng-bind-html="ul('Education','=')"></span></h2>
+        </div>
+        <div class="panel-body">
+          <div class="list-group educations">
+            <div class="list-group-item education" ng-repeat="ed in _.education">
+              <div class="card">
+                <div class="card-heading">
+                  <br/>
+                  <h4 class="card-title">
+                    {{ed.institution}}
+                    <br/><span ng-bind-html="ul(ed.institution,'-')"></span>
+                  </h4>
+                  <span class="place-name">{{ed.location }}&nbsp;&nbsp;</span>
+                  <div class="row" ng-repeat="degree in ed.degree">
+                    <div class="col-md-8">
+                      <b class="text-primary degree">**{{ degree.title }}** </b>
+                      <small class="text-muted cgpa" ng-if="degree.cgpa!=undefined">(CGPA:{{degree.cgpa}})</small>
+											<span class="degree-period" ng-if="degree.time.since!=undefined">
+												({{ degree.time.since }}
+												- <i ng-if="degree.time.current" class="fa fa-spinner fa-pulse fa-fw"
+                             uib-tooltip="current"></i>
+												{{ degree.time.until}})
+											</span>
+                      <span class="degree-period" ng-if="degree.time.period!=undefined">
+												({{ degree.time.period }})
+											</span>
+                      &nbsp;&nbsp;
+                    </div>
+                  </div>
+                </div>
+                <div class="list-group strips">
+                  <div class="list-group-item strip" ng-repeat="info in ed.info">
+                    *
+                    <span ng-if="info.type=='key-courses'">
+											<em>Key Courses</em>: <i class="fa fa-book"></i>
+											<span ng-bind-html-compile="csl(info.courses)"></span>
+										</span>
+                    <span ng-if="info.type=='thesis'">
+											<em>Thesis</em>: <i class="fa fa-lightbulb-o"></i>
+										</span>
+                    <span class="description" ng-bind-html-compile="mlt(info.description)"></span>
+                    <code ng-repeat="key in info.tech">({{ key }}) </code>
+                    </li>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!--  content ends -->
+      <div class="sidebar col-md-3">
+        <br/>
+        <h2 class="section-heading"><span>Miscellaneous</span><br/><span ng-bind-html="ul('Miscellaneous','=')"></span>
+        </h2>
+        <div class="side-section row" ng-repeat="section in _.sections">
+          <div class="col-md-12">
+            <div class="panel">
+              <div class="panel-heading">
+                <h3 class="section-head text-primary">### {{section.title}}</h3>
+              </div>
+              <div class="panel-body">
+                <div class="list-group" ng-repeat="info in section.info">*
+                  <span class="list-group-item" ng-bind-html-compile="info.description"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <br/>
+          <h3 class="section-heading"><span>Links</span><br/><span ng-bind-html="ul('Links','-')"></span></h3>
+          <div ng-repeat="link in _.links" class="link">
+            <i ng-if="link.fa!=undefined" class="fa {{ link.fa }}"></i>
+            <span>{{ link.for }}</span>:
+            <span class="url" ng-repeat="url in link.url"><a href="{{ url }}">{{ url }}</a>&nbsp;&nbsp;</span>
+          </div>
+          <br/>
+          <div class="stamp">
+            Updated on {{ _.dateUpdated }}, available online:
+            <a href="{{ _.hosted }}">{{ _.hosted }}</a>
+            <br/>
+            Contact for further information
+          </div>
+        </footer>
+      </div>
+    </div>
+    <div class="right-border col-md-1"></div>
+    <div class="row">
+      {{ xml }}
+    </div>
+  </div>
+</div>
+<script>
+  $(function () {
+  })
+</script>
 </body>
 </html>
