--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						stateTagClose = "</abbr>"
 					}
 					let streetline = '';
-					if(_.street != undefined){
+					if(_a.street != undefined){
 					    streetline = _a.street + "<br/>";
 					}
 					return streetline +
