--- a/md.html
+++ b/md.html
@@ -66,16 +66,20 @@
         if (_a != undefined) {
           var stateTagOpen, stateTagClose;
           if (_a.stateFull != undefined) {
-            stateTagOpen = "<abbr data-toggle='tooltip' title='" + _a.stateFull + "'>"
-            stateTagClose = "</abbr>"
+            stateTagOpen = "<abbr data-toggle='tooltip' title='" + _a.stateFull + "'>";
+            stateTagClose = "</abbr>";
           }
-          return _a.street + "<br/>" +
-                _a.city + ", " +
-                stateTagOpen + _a.state + stateTagClose
-                + " "
-                + _a.postCode;
+          let streetline = '';
+          if(_a.street != undefined){
+            streetline = _a.street + "<br/>";
+          }
+          return streetline +
+              _a.city + ", " +
+              stateTagOpen + _a.state + stateTagClose
+              + " "
+              + _a.postCode;
         }
-      }
+      };
     })
   </script>
   <style>
