--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 					<span class="url" ng-repeat="url in link.url"><a href="{{ url }}">{{ url }}</a></span>
 				</div>
 				<div class="stamp">
-					Updated on {{ _.dateUpdated }}, available online:
+					Updated on {{ _.dateUpdated }}<br/>available online:
 					<a href="{{ _.hosted }}">{{ _.hosted }}</a>
 					<br/>
 					Contact for further information
