--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Resume: Khan 'Sadh' Mostafa</title>
+	<title>Resume - Khan 'Sadh' Mostafa</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet"
 				href="bootstrap/css/bootstrap.min.css">
