--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
 	<script src="./ui-bootstrap-tpls-1.3.2.min.js"></script>
 	<!-- font awesome -->
-	<link rel="stylesheet" href="fontawesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link rel="stylesheet" href="bootstrap-print-alike.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="ns7r.css">
@@ -118,7 +118,7 @@
 						<li class="list-group-item experience" ng-repeat="job in _.experience">
 							<div class="card">
 								<div class="card-heading">
-									<i class="fa fa-li fa-2x fa-briefcase silver" aria-hidden="true"></i>
+									<i class="fas fa-li fa-2x fa-briefcase silver" aria-hidden="true"></i>
 									<script type="text/ng-template" id="jobTitlePopover.html">
 										<span ng-bind-html="job.about"></span>
 									</script>
@@ -132,7 +132,7 @@
 										{{job.company}}
 									</h4>
 									<a href="{{ job.mapUrl }}" target="_blank"><i
-												class="fa fa-map-marker dim"></i></a>&thinsp;<span
+												class="fas fa-map-marker-alt fa-sm dim"></i></a>&thinsp;<span
 											class="place-name">{{job.location }}</span>
 									<div class="row" ng-repeat="role in job.roles">
 										<div class="col-md-6">
@@ -140,10 +140,7 @@
 										</div>
 										<div class="col-md-6 text-right time-period">
 											<span class="job-period" ng-if="role.time.since!=undefined">
-												{{ role.time.since }}
-												- <i ng-if="role.time.current" class="fa fa-spinner fa-pulse fa-fw"
-														 uib-tooltip="current" print-alt="now"></i>
-												{{ role.time.until}}
+												{{ role.time.since }} ~ {{ role.time.until}}
 											</span>
 											<span class="job-period" ng-if="role.time.period!=undefined">
 												{{ role.time.period }}
@@ -172,7 +169,7 @@
 						<li class="list-group-item education" ng-repeat="ed in _.education">
 							<div class="card">
 								<div class="card-heading">
-									<i class="fa fa-li fa-2x fa-graduation-cap silver" aria-hidden="true"></i>
+									<i class="fas fa-li fa-2x fa-graduation-cap silver" aria-hidden="true"></i>
 									<script type="text/ng-template" id="edTitlePopover.html">
 										<span ng-bind-html="ed.about"></span>
 									</script>
@@ -186,7 +183,7 @@
 										{{ed.institution}}
 									</h4>
 									<a href="{{ ed.mapUrl }}" target="_blank"><i
-												class="fa fa-map-marker dim"></i></a>&thinsp;<span
+												class="fas fa-map-marker-alt fa-sm dim"></i></a>&thinsp;<span
 											class="place-name">{{ed.location }}</span>
 									<div class="row" ng-repeat="degree in ed.degree">
 										<div class="col-md-8">
@@ -195,10 +192,7 @@
 										</div>
 										<div class="col-md-4 text-right time-period">
 											<span class="degree-period" ng-if="degree.time.since!=undefined">
-												{{ degree.time.since }}
-												- <i ng-if="degree.time.current" class="fa fa-spinner fa-pulse fa-fw"
-														 uib-tooltip="current"></i>
-												{{ degree.time.until}}
+												{{ degree.time.since }} ~ {{ degree.time.until}}
 											</span>
 											<span class="degree-period" ng-if="degree.time.period!=undefined">
 												{{ degree.time.period }}
@@ -210,12 +204,12 @@
 									<li class="list-group-item strip" ng-repeat="info in ed.info">
 										<i class="fa-li fa fa-angle-right silver" aria-hidden="true"></i>
 										<span ng-if="info.type=='key-courses'">
-											<em>Key Courses</em>: <i class="fa fa-book"></i>
+											<i class="fas fa-book dim"></i> <em>Key Courses</em>:
 											<span ng-repeat="course in info.courses" ng-bind-html-compile="course"
 														class="comma-sep-list"></span>
 										</span>
 										<span ng-if="info.type=='thesis'">
-											<em>Thesis</em>: <i class="fa fa-lightbulb-o"></i>
+											<i class="fas fa-scroll dim"></i> <em>Thesis</em>: <i class="fa fa-lightbulb-o"></i>
 										</span>
 										<span class="description" ng-bind-html-compile="mlt(info.description)"></span>
 										<code ng-repeat="key in info.tech">{{ key }}</code>
@@ -233,21 +227,21 @@
 				<div class="row info-address">
 					<ul class="fa-ul">
 						<li>
-							<i class="fa-li fa fa-map-marker" aria-hidden="true"></i>
+							<i class="fa-li fas fa-map-marker-alt fa-sm" aria-hidden="true"></i>
 							<address ng-bind-html-compile="renderAddress(_.address)"></address>
 						</li>
 						<li>
-							<abbr title="Phone"><i class="fa-li fa fa-phone"></i></abbr>
+							<abbr title="website"><i class="fa-li fas fa-home fa-sm"></i></abbr>
+							<a href="{{_.website}}">{{ _.website }}</a>
+						</li>
+						<li>
+							<abbr title="Phone"><i class="fa-li fas fa-phone fa-sm"></i></abbr>
 							<a href="{{ _.telUrl }}">{{ _.phone }}</a>
 						</li>
 						<li>
-							<abbr title="email"><i class="fa-li fa fa-envelope-o"></i></abbr>
+							<abbr title="email"><i class="fa-li fas fa-envelope fa-sm"></i></abbr>
 							<span ng-if="!withemail">{{ _.email}}</span>
 							<a ng-if="withemail" href="mailto:{{ withemail }} ">{{ withemail }}</a>
-						</li>
-						<li>
-							<abbr title="website"><i class="fa-li fa fa-globe"></i></abbr>
-							<a href="{{_.website}}">{{ _.website }}</a>
 						</li>
 					</ul>
 				</div>
@@ -294,8 +288,8 @@
 			</div>
 			<footer>
 				<div ng-repeat="link in _.links" class="link">
-					<i ng-if="link.fa!=undefined" class="fa {{ link.fa }}"></i>
-					<span>{{ link.for }}</span>:
+					<i ng-if="link.fa!=undefined" class="{{ link.fa }}"></i>
+					<span ng-if="link.for">{{ link.for }}:</span>
 					<span class="url" ng-repeat="url in link.url"><a href="{{ url }}">{{ url }}</a></span>
 				</div>
 				<div class="stamp">
